<resources>
    <string name="app_name">MyProject</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="fullname">Полное имя</string>
    <string name="email">Email</string>
    <string name="authorization">Авторизация</string>
    <string name="signup">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="dont_have_acc">Нет аккаунта?</string>
    <string name="have_acc">Уже есть аккаунт?</string>
    <string name="pref_key">user_pref</string>
    <string name="movies">Фильмы</string>
    <string name="tickets">Билеты</string>
    <string name="profile">Профиль</string>
    <string name="edit">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="title_movie">Название фильма</string>
    <string name="todo">TODO</string>
    <string name="title_date">Дата:</string>
    <string name="title_duration">Время:</string>
    <string name="title_price">Цена:</string>
    <string name="title_hall">Зал:</string>
    <string name="title_row">Ряд:</string>
    <string name="title_number">Место:</string>
    <string name="return_ticket">Вернуть билет</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="movie_duration">Время:</string>
    <string name="movie_release_year">Год выпуска:</string>
    <string name="movie_director">Режиссер:</string>
    <string name="movie_genres">Жанры:</string>
    <string name="movie_countries">Страны:</string>
    <string name="close">Закрыть</string>
    <string name="choice_date">Выберите дату</string>
    <string name="choice_time">Выберите Время</string>
    <string name="buy_ticket">Купить билет</string>
    <string name="choice_seat">Выбрать место</string>
    <string name="display">Экран</string>
    <string name="choice_screening">Выбрать сеанс</string>
</resources>