<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    android:padding="5dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageMovieTicket"
                android:src="@drawable/ic_baseline_image_24"
                android:scaleType="centerCrop"
                android:layout_width="120dp"
                android:layout_height="160dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="14dp">

                <TextView
                    android:id="@+id/textMovieTitleTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/title_movie" />

                <TextView
                    android:id="@+id/textMovieDateTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_date" />

                <TextView
                    android:id="@+id/textMovieDurationTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_duration" />

                <TextView
                    android:id="@+id/textPriceTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_price" />

                <TextView
                    android:id="@+id/textHallNameTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_hall" />

                <TextView
                    android:id="@+id/textRowTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_row" />

                <TextView
                    android:id="@+id/textNumberTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/title_number" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonReturnTicket"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/material_dynamic_tertiary30"
            android:text="@string/return_ticket"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
